--- a/src/views/resources/ui/StyledMainView.ui
+++ b/src/views/resources/ui/StyledMainView.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>970</width>
     <height>600</height>
    </rect>
   </property>
@@ -36,6 +36,14 @@
 
 #statusframe{
 	background-color: rgb(0, 120, 215)
+}
+
+#irframe{
+	background-color: rgba(30, 30, 30,150);
+}
+
+#depthframe{
+	background-color: rgba(30, 30, 30,150);
 }</string>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -134,7 +142,10 @@
              </sizepolicy>
             </property>
             <property name="styleSheet">
-             <string notr="true">QPushButton:hover:!pressed
+             <string notr="true">*{
+	padding:10px
+}
+QPushButton:hover:!pressed
 {
   border: 1px solid red;
 }</string>
@@ -157,10 +168,14 @@
           <item>
            <widget class="QPushButton" name="configbutton">
             <property name="styleSheet">
-             <string notr="true">QPushButton:hover:!pressed
+             <string notr="true">*{
+	padding: 10px;
+}
+QPushButton:hover:!pressed
 {
   border: 1px solid red;
-}</string>
+}
+</string>
             </property>
             <property name="text">
              <string>CONFIGURE</string>
@@ -177,7 +192,10 @@
           <item>
            <widget class="QPushButton" name="toggleplaybutton">
             <property name="styleSheet">
-             <string notr="true">QPushButton:hover:!pressed
+             <string notr="true">*{
+	padding:10px;
+}
+QPushButton:hover:!pressed
 {
   border: 1px solid red;
 }</string>
@@ -197,7 +215,10 @@
           <item>
            <widget class="QPushButton" name="snapshotbutton">
             <property name="styleSheet">
-             <string notr="true">QPushButton:hover:!pressed
+             <string notr="true">*{
+	padding:10px;
+}
+QPushButton:hover:!pressed
 {
   border: 1px solid red;
 }</string>
@@ -348,7 +369,97 @@
             <property name="currentIndex">
              <number>0</number>
             </property>
-            <widget class="QWidget" name="basedisplaypage"/>
+            <widget class="QWidget" name="basedisplaypage">
+             <layout class="QVBoxLayout" name="verticalLayout_2">
+              <item>
+               <widget class="QFrame" name="basesettingsframe">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>0</width>
+                  <height>70</height>
+                 </size>
+                </property>
+                <property name="frameShape">
+                 <enum>QFrame::StyledPanel</enum>
+                </property>
+                <property name="frameShadow">
+                 <enum>QFrame::Raised</enum>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QFrame" name="basedisplayframe">
+                <property name="frameShape">
+                 <enum>QFrame::StyledPanel</enum>
+                </property>
+                <property name="frameShadow">
+                 <enum>QFrame::Raised</enum>
+                </property>
+                <layout class="QHBoxLayout" name="horizontalLayout_2">
+                 <property name="spacing">
+                  <number>0</number>
+                 </property>
+                 <property name="leftMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="topMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="rightMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="bottomMargin">
+                  <number>0</number>
+                 </property>
+                 <item>
+                  <widget class="QFrame" name="irframe">
+                   <property name="frameShape">
+                    <enum>QFrame::StyledPanel</enum>
+                   </property>
+                   <property name="frameShadow">
+                    <enum>QFrame::Raised</enum>
+                   </property>
+                   <layout class="QVBoxLayout" name="verticalLayout_3">
+                    <item>
+                     <widget class="QLabel" name="irpixmaplabel">
+                      <property name="text">
+                       <string/>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QFrame" name="depthframe">
+                   <property name="frameShape">
+                    <enum>QFrame::StyledPanel</enum>
+                   </property>
+                   <property name="frameShadow">
+                    <enum>QFrame::Raised</enum>
+                   </property>
+                   <layout class="QVBoxLayout" name="verticalLayout_4">
+                    <item>
+                     <widget class="QLabel" name="depthpixmaplabel">
+                      <property name="text">
+                       <string/>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
+              </item>
+             </layout>
+            </widget>
             <widget class="QWidget" name="dnnpage"/>
             <widget class="QWidget" name="pointcloudpage"/>
             <widget class="QWidget" name="bodytrackingpage"/>
